# llm-playground

./: .gitignore  ARCHITECTURE_COMPONENTS_SUMMARY.md  ARCHITECTURE_QUICK_REFERENCE.md  CLAUDE.md  DATA_COLLECTION_SUMMARY.md  IMPLEMENTATION_REPORT_SFT_API.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  SFT_TRAINER_QUICK_REFERENCE.md  SFT_TRAINER_SUMMARY.md  TRAINING_ENGINE_SUMMARY.md  TRAINING_QUICK_REFERENCE.md  docker-compose.yml  package.json  pnpm-lock.yaml  prd.md  setup.sh  turbo.json
backend/: .env.example  Dockerfile  Makefile  SFT_API_IMPLEMENTATION_STATUS.md  SFT_API_QUICK_REFERENCE.md  SFT_API_SUMMARY.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  data_routes.py  models.py  persistence.py  routes.py  sft_job_manager.py  sft_routes.py  training_job_manager.py  training_routes.py  transformer_routes.py
backend/app/data/: __init__.py  cleaning.py  loaders.py  splitter.py  stats.py
backend/app/sft/: __init__.py  callbacks.py  config.py  dataset.py  lora_config.py  templates.py  trainer.py
backend/app/tokenization/: __init__.py  base.py  bpe.py  huggingface_wrapper.py  inspector.py
backend/app/training/: __init__.py  checkpoint.py  checkpoint_cleaner.py  config.py  distributed.py  metrics.py  scheduler.py  train_script.py  trainer.py
backend/app/transformer/: __init__.py  attention.py  configurator.py  embeddings.py  feed_forward.py  layer_norm.py  model.py  transformer_block.py  visualization.py
backend/config/examples/: README.md  gpt2_medium_wikitext.yaml  gpt2_small_basic.yaml  gpt2_small_finetuning.yaml  gpt2_tiny_debug.yaml  sft_alpaca.yaml  sft_chat_qlora.yaml
backend/examples/: train_sft.py
backend/tests/: __init__.py  test_api.py  test_bpe_tokenizer.py  test_checkpoint.py  test_data_cleaning.py  test_data_loader.py  test_data_performance.py  test_data_splitter.py  test_data_stats.py  test_huggingface_wrapper.py  test_inspector.py  test_model.py  test_scheduler.py  test_trainer.py  test_training_api.py  test_training_config.py  test_training_job_manager.py  test_training_metrics.py  test_transformer.py
backend/tests/integration/: __init__.py  test_api_integration.py  test_custom_dataset_upload.py  test_ddp.py  test_gradient_checkpointing.py  test_gradient_checkpointing_functional.py  test_job_cancellation.py  test_job_persistence.py  test_job_queueing.py  test_sft_api_integration.py  test_sft_trainer_integration.py  test_training_integration.py  test_training_resume.py
(+26 files in other folders)
