[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-playground"
version = "0.1.0"
description = "Educational platform for learning and experimenting with Large Language Models"
requires-python = ">=3.10"
authors = [{name = "O'Marie Pemberton", email = "omarie@example.com"}]
license = {text = "MIT"}

dependencies = [
    # FastAPI & Web
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # ML & Data
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "tokenizers>=0.14.0",
    "accelerate>=0.24.0",
    "datasets>=2.14.0",
    "numpy>=1.24.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-pyyaml>=6.0.0",
    "types-requests>=2.31.0",
    "ipython>=8.16.0",
    "jupyter>=1.0.0",
]

training = [
    "deepspeed>=0.11.0",
    "peft>=0.7.0",
    "trl>=0.7.0",
    "wandb>=0.15.0",
]

inference = [
    "vllm>=0.2.0",
]

eval = [
    "lm-eval>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/llm-playground"
Documentation = "https://llm-playground.readthedocs.io"
Repository = "https://github.com/yourusername/llm-playground.git"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
